plugins {
    id 'java'
    id 'application'
    id'idea'
}

group 'com.abhisheksingh.quiz'
version '1.0'

repositories {
    mavenCentral()
}
idea {
    module{
        downloadJavadoc = true
        downloadSources = true
    }
}
application{
    mainClass.set("com.abhisheksingh.quiz.Main")
}

java{
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

test {
    useJUnitPlatform()
}

run {
    jvmArgs = [
            '-XX:+UnlockDiagnosticVMOptions',
            '-Xlog:gc+ergo',
            '-Xlog:gc+stats',
            '-XX:+AlwaysPreTouch',
            '-Xmx1g', '-Xms1g',
            '-XX:+UseNUMA',
            '-XX:-UseBiasedLocking',
            '-XX:+DisableExplicitGC',
            '-XX:ShenandoahGCMode=normal/satb',
            '-XX:+ShenandoahVerify',
            '-XX:+HeapDumpOnOutOfMemoryError',
            '-XX:HeapDumpPath=heapdump.hprof',
            '-XX:StartFlightRecording=disk=true' +
                    ',dumponexit=true' +
                    ',filename=recording.jfr,' +
                    'maxsize=1024m' +
                    ',maxage=1d' +
                    ',settings=profile' +
                    ',path-to-gc-roots=true',
            '-Xverify:all']
}